--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.4.0",
     "miragejs": "^0.1.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
