--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-modal": "^3.16.0",
     "axios": "^1.4.0",
     "miragejs": "^0.1.47",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
